# generated-build-inputs

./: CMakeLists.txt  generator.py  servertest.cpp  servertest.qbs
